add test file & build config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,18 +6,13 @@
             "dom"
         ],
         "noImplicitAny": true,
-        "noImplicitThis": false,
-        "strictNullChecks": false,
-        "strictFunctionTypes": true,
-        "baseUrl": "../",
-        "typeRoots": [
-            "../"
-        ],
-        "types": [],
-        "noEmit": true,
+        "noImplicitThis": true,
+        "strictNullChecks": true,
         "forceConsistentCasingInFileNames": true
     },
     "files": [
-        "index.d.ts"
+        "index.d.ts",
+        "wegame-api-tests.ts",
+        "datacontext/index.ts"
     ]
 }
