add noEmit to tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "noImplicitThis": true,
         "strictNullChecks": true,
         "strictFunctionTypes": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "noEmit": true
     },
     "files": [
         "index.d.ts",
